--- a/actors-actresses.html
+++ b/actors-actresses.html
@@ -328,13 +328,17 @@
       @media (max-width: 600px) {
         .navbar-main-links {
           font-size: 1.5rem;
+          line-height: 1.2;
         }
         .navbar-header .caa-logo {
           font-size: 2rem;
         }
+        .nav-main-link {
+          margin-bottom: 8px;
+        }
         .navbar-secondary-links {
           flex-direction: column;
-          gap: 16px;
+          gap: 12px;
         }
       }
 
