--- a/popular people.html
+++ b/popular people.html
@@ -855,7 +855,7 @@
               >Actors and Actresses</a
             ><br />
             <a class="nav-main-link" href="sports-personalities.html"
-              >Sports Personalities (Athlete-Celebrities)</a
+              >Sports Personalities </a
             ><br />
           </h1>
           <ul class="navbar-secondary-links">
