--- a/career.html
+++ b/career.html
@@ -1,8 +1,3 @@
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -868,6 +863,9 @@
               <a href="about-us.html" class="nav-secondary-link">About</a>
             </li>
             <li>
+              <a href="career.html" class="nav-secondary-link">Career</a>
+            </li>
+            <li>
               <a href="contact.html" class="nav-secondary-link">Contact</a>
             </li>
           </ul>
@@ -880,96 +878,116 @@
 
     <!-- About CAA Section -->
     <!-- About CAA Section -->
-<section class="about-caa-section">
-  <br /><br />
-  <h2 class="about-caa-title staggered">About CAA</h2>
-  <hr class="about-caa-divider staggered" />
-  <h3 class="about-caa-headline staggered">
-    The world's leading entertainment, sports and media agency.
-  </h3>
+    <section class="about-caa-section">
+      <br /><br />
+      <h2 class="about-caa-title staggered">About CAA</h2>
+      <hr class="about-caa-divider staggered" />
+      <h3 class="about-caa-headline staggered">
+        The world's leading entertainment, sports and media agency.
+      </h3>
 
-  <p class="about-caa-text staggered">
-    CAA represents many of the most influential creators, performers, athletes, and brands around the world. 
-    From Academy Award‑winning directors to franchise players to new media startups, clients rely on CAA to 
-    represent their interests, provide expert guidance, and create new opportunities.
-  </p>
+      <p class="about-caa-text staggered">
+        CAA represents many of the most influential creators, performers,
+        athletes, and brands around the world. From Academy Award‑winning
+        directors to franchise players to new media startups, clients rely on
+        CAA to represent their interests, provide expert guidance, and create
+        new opportunities.
+      </p>
 
-  <p class="about-caa-text staggered">
-    Founded in 1975, CAA has offices in Los Angeles, New York, Nashville, Miami, London, Munich, Beijing, 
-    and beyond. Our employees come from a variety of backgrounds but all share an entrepreneurial mindset 
-    and the belief that a respectful, collegial work environment is a prerequisite for success.
-  </p>
+      <p class="about-caa-text staggered">
+        Founded in 1975, CAA has offices in Los Angeles, New York, Nashville,
+        Miami, London, Munich, Beijing, and beyond. Our employees come from a
+        variety of backgrounds but all share an entrepreneurial mindset and the
+        belief that a respectful, collegial work environment is a prerequisite
+        for success.
+      </p>
 
-  <p class="about-caa-text staggered">
-    CAA is a service‑driven organization. We serve our clients in teams, ensuring they benefit from the 
-    expertise and connections we offer across the entire company. We also believe this collaborative and 
-    inclusive approach makes CAA a better place to work.
-  </p>
+      <p class="about-caa-text staggered">
+        CAA is a service‑driven organization. We serve our clients in teams,
+        ensuring they benefit from the expertise and connections we offer across
+        the entire company. We also believe this collaborative and inclusive
+        approach makes CAA a better place to work.
+      </p>
 
-  <h3 class="about-caa-headline staggered">
-    Assistant & Entry-Level Opportunities
-  </h3>
-  <p class="about-caa-text staggered">
-    CAA maintains a long-standing commitment to growing its employees' careers. Assistants, mailroom clerks, 
-    and receptionists, along with additional colleagues across the company, play a critical role in enabling 
-    our business to deliver the best results for our clients. Our staff's growth comes from educational offerings 
-    and hands-on development opportunities that provide the skills and knowledge needed to forge industry relationships 
-    and build a career in entertainment, sports, and media.
-  </p>
+      <h3 class="about-caa-headline staggered">
+        Assistant & Entry-Level Opportunities
+      </h3>
+      <p class="about-caa-text staggered">
+        CAA maintains a long-standing commitment to growing its employees'
+        careers. Assistants, mailroom clerks, and receptionists, along with
+        additional colleagues across the company, play a critical role in
+        enabling our business to deliver the best results for our clients. Our
+        staff's growth comes from educational offerings and hands-on development
+        opportunities that provide the skills and knowledge needed to forge
+        industry relationships and build a career in entertainment, sports, and
+        media.
+      </p>
 
-  <h3 class="about-caa-headline staggered">
-    Roles for Mid-Career and Senior Professionals
-  </h3>
-  <p class="about-caa-text staggered">
-    We are always looking for experienced and specialized professionals to help us forge the future of entertainment, 
-    sports, and media. In addition to talent representation, CAA has robust practice areas in brand consulting, business 
-    development, media rights advisory, and more. Our finance, IT, human resources, legal, and communications teams are 
-    best‑in‑class, and CAA offers unparalleled opportunities for professional growth. Our culture is fast‑paced, 
-    entrepreneurial, diverse, and collaborative.
-  </p>
+      <h3 class="about-caa-headline staggered">
+        Roles for Mid-Career and Senior Professionals
+      </h3>
+      <p class="about-caa-text staggered">
+        We are always looking for experienced and specialized professionals to
+        help us forge the future of entertainment, sports, and media. In
+        addition to talent representation, CAA has robust practice areas in
+        brand consulting, business development, media rights advisory, and more.
+        Our finance, IT, human resources, legal, and communications teams are
+        best‑in‑class, and CAA offers unparalleled opportunities for
+        professional growth. Our culture is fast‑paced, entrepreneurial,
+        diverse, and collaborative.
+      </p>
 
-  <h3 class="about-caa-headline staggered">
-    Opportunities for Students
-  </h3>
-  <p class="about-caa-text staggered">
-    The CAA Internship Program offers current students and recent graduates the opportunity to gain relevant, hands‑on 
-    work experience at a leading entertainment, media, and sports agency.
-  </p>
-  <p class="about-caa-text staggered">
-    Unscrupulous websites sometimes post CAA jobs and mislead jobseekers into submitting resumes, providing sensitive 
-    information (such as social security numbers), or paying fees. These websites are not affiliated with CAA and do 
-    not act on behalf of CAA. Always utilize the CAA Careers page to find available openings and know that CAA will 
-    never ask for sensitive personal information or fees as part of your application.
-  </p>
+      <h3 class="about-caa-headline staggered">Opportunities for Students</h3>
+      <p class="about-caa-text staggered">
+        The CAA Internship Program offers current students and recent graduates
+        the opportunity to gain relevant, hands‑on work experience at a leading
+        entertainment, media, and sports agency.
+      </p>
+      <p class="about-caa-text staggered">
+        Unscrupulous websites sometimes post CAA jobs and mislead jobseekers
+        into submitting resumes, providing sensitive information (such as social
+        security numbers), or paying fees. These websites are not affiliated
+        with CAA and do not act on behalf of CAA. Always utilize the CAA Careers
+        page to find available openings and know that CAA will never ask for
+        sensitive personal information or fees as part of your application.
+      </p>
 
-  <p class="about-caa-text staggered">
-    We look for employees who are as collaborative as they are driven, and who are as passionate about the causes that 
-    matter to them as they are about their work. Through the 
-    <strong><a href="/foundation">CAA Foundation</a></strong>, we give employees meaningful opportunities to give back 
-    to their communities.
-  </p>
+      <p class="about-caa-text staggered">
+        We look for employees who are as collaborative as they are driven, and
+        who are as passionate about the causes that matter to them as they are
+        about their work. Through the
+        <strong><a href="/foundation">CAA Foundation</a></strong
+        >, we give employees meaningful opportunities to give back to their
+        communities.
+      </p>
 
-  <p class="about-caa-text staggered">
-    Fostering an environment inclusive of more diverse voices and backgrounds makes our company stronger and provides a 
-    richer experience for our employees, clients, and audiences worldwide. CAA is committed to bringing diverse voices 
-    and talent to the table, both within our workforce and with the clients and projects we represent.
-  </p>
+      <p class="about-caa-text staggered">
+        Fostering an environment inclusive of more diverse voices and
+        backgrounds makes our company stronger and provides a richer experience
+        for our employees, clients, and audiences worldwide. CAA is committed to
+        bringing diverse voices and talent to the table, both within our
+        workforce and with the clients and projects we represent.
+      </p>
 
-  <p class="about-caa-text staggered">
-    Internally, CAA strives to create a workforce where all individuals have the equal opportunity to grow and reach 
-    their full potential regardless of race, color, religion, creed, gender or sex, national origin, ancestry, age, 
-    physical or mental disability, genetic information, family and medical care leave status, military or veteran 
-    status, marital or family status, sexual orientation, gender identity, gender expression, political affiliation, 
-    or reproductive health decision‑making.
-  </p>
+      <p class="about-caa-text staggered">
+        Internally, CAA strives to create a workforce where all individuals have
+        the equal opportunity to grow and reach their full potential regardless
+        of race, color, religion, creed, gender or sex, national origin,
+        ancestry, age, physical or mental disability, genetic information,
+        family and medical care leave status, military or veteran status,
+        marital or family status, sexual orientation, gender identity, gender
+        expression, political affiliation, or reproductive health
+        decision‑making.
+      </p>
 
-  <p class="about-caa-text staggered">
-    CAA's Employee Committee initiative enhances company culture. With chapters in Los Angeles, New York, Nashville, 
-    and London, these committees create programming that educates, inspires, and connects colleagues, industry peers, 
-    and communities — driving dialogue about topics impacting our industries.
-  </p>
-</section>
-
+      <p class="about-caa-text staggered">
+        CAA's Employee Committee initiative enhances company culture. With
+        chapters in Los Angeles, New York, Nashville, and London, these
+        committees create programming that educates, inspires, and connects
+        colleagues, industry peers, and communities — driving dialogue about
+        topics impacting our industries.
+      </p>
+    </section>
 
     <!-- Stagger Animation Script -->
     <script>
