--- a/actors-actresses.html
+++ b/actors-actresses.html
@@ -863,6 +863,9 @@
               <a href="about-us.html" class="nav-secondary-link">About</a>
             </li>
             <li>
+              <a href="career.html" class="nav-secondary-link">Career</a>
+            </li>
+            <li>
               <a href="contact.html" class="nav-secondary-link">Contact</a>
             </li>
           </ul>
@@ -956,7 +959,6 @@
         async function getPopularActorsWithPricing() {
           const response = await fetch("actors-top500.json");
           const actors = await response.json();
-
 
           // Render cards
           const container = document.getElementById("celebrity-cards");
@@ -1149,9 +1151,7 @@
               a.name
             )}'">
               <img src="${a.image}" alt="${a.name}" class="actor-img">
-              <div class="actor-info"><b>${
-                a.name
-              }</b></div>
+              <div class="actor-info"><b>${a.name}</b></div>
             </div>`
         )
         .join("");
