--- a/popular people.html
+++ b/popular people.html
@@ -863,6 +863,9 @@
               <a href="about-us.html" class="nav-secondary-link">About</a>
             </li>
             <li>
+              <a href="career.html" class="nav-secondary-link">Career</a>
+            </li>
+            <li>
               <a href="contact.html" class="nav-secondary-link">Contact</a>
             </li>
           </ul>
