--- a/popular people.html
+++ b/popular people.html
@@ -965,7 +965,7 @@
       <script>
         async function getPopularPeopleWithPricing() {
           const apiKey = "cf324c1862aff1f7ccd25c8e397e7ced";
-          const url = `https://api.themoviedb.org/3/person/popular?api_key=${apiKey}`;
+          const url = `https://api.themoviedb.org/3/person/popular?api_key=cf324c1862aff1f7ccd25c8e397e7ced`;
 
           try {
             const response = await fetch(url);
@@ -1067,7 +1067,7 @@
           resultDiv.innerHTML = "Searching...";
 
           const apiKey = "cf324c1862aff1f7ccd25c8e397e7ced";
-          const url = `https://api.themoviedb.org/3/search/person?api_key=${apiKey}&query=${encodeURIComponent(
+          const url = `https://api.themoviedb.org/3/search/person?api_key=cf324c1862aff1f7ccd25c8e397e7ced&query=${encodeURIComponent(
             query
           )}`;
 
